--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     ]
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.5",
     "preact": "^10.10.0",
     "preact-render-to-string": "^5.2.1",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.12",
