Added an updated name to the package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "experiment-2",
+  "name": "Mini-Portfolio App",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
