--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "experiment-2",
-  "short_name": "experiment-2",
+  "name": "Mini-Portfolio App",
+  "short_name": "Mini-Portfolio App",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
